# Aporia.loader

./: CMakeLists.txt  README.md
src/: config.cpp  config.h  downloader.cpp  downloader.h  main.cpp  main.cpp.backup  resource_extractor.h  utils.h
versions/Fabric 1.21.11/: Fabric 1.21.11.json
